--- a/client/assets/_items.scss
+++ b/client/assets/_items.scss
@@ -133,7 +133,7 @@
   font-size: 16px;
 }
 
-.session-page .btn-primary {
+.session-page .review-actions .btn-primary {
   width: 100%;
 }
 
